--- a/juicy-draggable.html
+++ b/juicy-draggable.html
@@ -5,7 +5,7 @@ version: 0.0.3
 -->
 
 <template id="juicy-draggable-element">
-    <content id="content"></content>
+    <slot id="content"></slot>
 </template>
 <script>
     (function () {
@@ -252,7 +252,13 @@ version: 0.0.3
             var element = null;
             var handle = null;
             var that = this;
-            var root = this.createShadowRoot();
+            var root;
+            if (this.attachShadow) {
+                root = this.attachShadow({ mode: 'open' });
+            } else {
+                root = this.createShadowRoot();
+            }
+
             var template = scriptDocument.querySelector("#juicy-draggable-element");
             var clone = document.importNode(template.content, true);
             root.appendChild(clone);
