--- a/juicy-draggable.html
+++ b/juicy-draggable.html
@@ -5,7 +5,6 @@ version: 0.0.3
 -->
 
 <template id="juicy-draggable-element">
-    <slot id="content"></slot>
 </template>
 <script>
     (function () {
@@ -255,10 +254,13 @@ version: 0.0.3
             var root;
             if (this.attachShadow) {
                 root = this.attachShadow({ mode: 'open' });
+                root.innerHTML = '<slot id="content"></slot>';
             } else {
                 root = this.createShadowRoot();
+                root.innerHTML = '<content id="content"></content>';
             }
 
+            this.refreshAttributeValues();
             var template = scriptDocument.querySelector("#juicy-draggable-element");
             var clone = document.importNode(template.content, true);
             root.appendChild(clone);
@@ -308,14 +310,14 @@ version: 0.0.3
         };
         JuicyDraggablePrototype.attributeChangedCallback = function (attributeName) {
             switch (attributeName) {
-                case "disabled":
-                    var value = this.hasAttribute("disabled");
-                    if (value) {
-                        this.element.setAttribute("data-draggable-disabled", "disabled");
-                    } else {
-                        this.element.removeAttribute("data-draggable-disabled");
-                    }
-                    break;
+            case "disabled":
+                var value = this.hasAttribute("disabled");
+                if (value) {
+                    this.element.setAttribute("data-draggable-disabled", "disabled");
+                } else {
+                    this.element.removeAttribute("data-draggable-disabled");
+                }
+                break;
             }
         };
         JuicyDraggablePrototype.getScreenSize = function () {
